<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff888888"
    android:orientation="vertical"
    android:weightSum = "3"
    tools:context="edu.auburn.eng.csse.comp3710.OJICHAR.midterm18.HaikuActivity">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff888888"
    android:orientation="vertical"
    android:weightSum = "3"
    tools:context="edu.auburn.eng.csse.comp3710.OJICHAR.midterm18.HaikuActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:paddingBottom="16dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroup">



            <RadioButton
                android:id="@+id/radio_adjButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/adjectives_button"
                android:onClick="onRadioButtonClicked"/>


        <RadioButton
            android:id="@+id/radio_nounButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radio_adjButton"
            android:layout_below="@+id/radio_adjButton"
            android:text="@string/nouns_button"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_verbsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radio_nounButton"
            android:layout_below="@+id/radio_nounButton"
            android:text="@string/verbs_button"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_otherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radio_verbsButton"
            android:layout_below="@+id/radio_verbsButton"
            android:text="@string/other_button"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/addButton"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="59dp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/radioGroup"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="29dp"
            android:text="@string/addButton" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:paddingBottom="16dp">


        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/delete_button" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            android:text="@string/Line1" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView25"
            android:layout_below="@+id/textView25"
            android:layout_marginTop="24dp"
            android:text="@string/Line2" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView26"
            android:layout_centerVertical="true"
            android:text="@string/Line3" />




    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_weight=".9"
        android:paddingTop="16dp"
        android:background="#ffd">


        <LinearLayout
            android:id="@+id/linearLayoutLayout"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


            <Button
                android:id="@+id/startoverButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startover_button" />

            <Button
                android:id="@+id/displayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/display_button" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>

</FrameLayout>







